force-app/main/default/objects/DHS_Subject_Message__c/DHS_Subject_Message__c.object-meta.xml
<CustomObject>
    <label>Subject Message</label>
    <nameField>
        <displayFormat>SMN-{0000000}</displayFormat>
        <label>Subject Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subject Messages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>