force-app/main/default/objects/DHS_Subject_Message__c/fields/DHS_Case__c.field-meta.xml
<CustomField>
    <fullName>DHS_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DIA Case</label>
    <referenceTo>DHS_Case__c</referenceTo>
    <relationshipLabel>Subject Messages</relationshipLabel>
    <relationshipName>DHS_Subject_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>