force-app/main/default/objects/DHS_Subject_Message__c/fields/DHS_Subject__c.field-meta.xml
<CustomField>
    <fullName>DHS_Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subject</label>
    <referenceTo>DIA_Contact__c</referenceTo>
    <relationshipLabel>Subject Messages</relationshipLabel>
    <relationshipName>DHS_Subject_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>