force-app/main/default/objects/DHS_Subject_Message__c/listViews/DHS_All.listView-meta.xml
<ListView>
    <fullName>DHS_All</fullName>
    <columns>NAME</columns>
    <columns>DHS_Case__c</columns>
    <columns>Message_Subject__c</columns>
    <columns>Message_Type__c</columns>
    <columns>DHS_Subject__c</columns>
    <columns>DHS_From_User__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>DHS_All</label>
</ListView>